; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/sfc/falcon/extr_rx.c_ef4_sync_rx_buffer.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/sfc/falcon/extr_rx.c_ef4_sync_rx_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ef4_nic = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.ef4_rx_buffer = type { i32 }

@DMA_FROM_DEVICE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ef4_nic*, %struct.ef4_rx_buffer*, i32)* @ef4_sync_rx_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ef4_sync_rx_buffer(%struct.ef4_nic* %0, %struct.ef4_rx_buffer* %1, i32 %2) #0 {
  %4 = alloca %struct.ef4_nic*, align 8
  %5 = alloca %struct.ef4_rx_buffer*, align 8
  %6 = alloca i32, align 4
  store %struct.ef4_nic* %0, %struct.ef4_nic** %4, align 8
  store %struct.ef4_rx_buffer* %1, %struct.ef4_rx_buffer** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.ef4_nic*, %struct.ef4_nic** %4, align 8
  %8 = getelementptr inbounds %struct.ef4_nic, %struct.ef4_nic* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load %struct.ef4_rx_buffer*, %struct.ef4_rx_buffer** %5, align 8
  %12 = getelementptr inbounds %struct.ef4_rx_buffer, %struct.ef4_rx_buffer* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* @DMA_FROM_DEVICE, align 4
  %16 = call i32 @dma_sync_single_for_cpu(i32* %10, i32 %13, i32 %14, i32 %15)
  ret void
}

declare dso_local i32 @dma_sync_single_for_cpu(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
